# Open-Facility-Viewer

./: 64bit_build_notes.txt  CMakeLists.txt  Create Model Pack.bat  HOW_TO_BUILD.txt  LICENSE-OFV.txt  Model-listfile.txt  README.md  README.txt  cmake.nsh  excludelist.txt  installer.nsh
CMakeModules/: FindDelta3D.cmake  FindOFV.cmake  OsgMacroUtils.cmake  UtilityMacros.cmake
ext/: delta3d-2.8-REL_x64.patch
include/OFV/GMApp/: Export.h  FlyLimitMotionModel.h  HumanMotionModel.h  OFVGameEntryPoint.h  OFVInputComponent.h
include/OFV/Qt/: App.h  ImageViewer.h  MainWindow.h
source/: CMakeLists.txt
source/OFV/GMApp/: CMakeLists.txt  FlyLimitMotionModel.cpp  HumanMotionModel.cpp  OFVGameEntryPoint.cpp  OFVInputComponent.cpp  config.h.in
source/OFV/Qt/: App.cpp  CMakeLists.txt  ImageViewer.cpp  MainWindow.cpp  MainWindow.ui  OFV.qrc  main.cpp
