
SET(PROG_NAME OFV)


OPTION(BUILD_AS_CONSOLE "Build as Console application for debugging purposes" ON)

SET(SOURCE_PATH ${OFV_SOURCE_DIR}/source/OFV/Qt)
SET(HEADER_PATH ${OFV_SOURCE_DIR}/include/OFV/Qt)
SET(UI_PATH ${OFV_SOURCE_DIR}/source/OFV/Qt)

file(GLOB UI_FILES "${UI_PATH}/*.ui")
file(GLOB PROG_SOURCES "*.cpp" "*.rc")
file(GLOB PROG_HEADERS "${HEADER_PATH}/*.h")


list(REMOVE_ITEM PROG_SOURCES ${SOURCE_PATH}/precomp.cpp)

qt4_wrap_cpp(MOC_SOURCES ${PROG_HEADERS})
QT4_ADD_RESOURCES(RCC_SOURCES OFV.qrc)
qt4_wrap_ui(UIC_HEADERS ${UI_FILES})


#The ui files are output here, so it must be included.
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR})

IF(BUILD_AS_CONSOLE)
	MESSAGE("Building as CONSOLE application.")
	ADD_EXECUTABLE(${PROG_NAME} 
				   ${PROG_SOURCES} 
				   ${PROG_HEADERS}
				   ${UIC_HEADERS}
				   ${MOC_SOURCES}
				   ${RCC_SOURCES}
				   )
ELSE(BUILD_AS_CONSOLE)
	MESSAGE("Building as Win32 application.")
	ADD_EXECUTABLE(${PROG_NAME} 
				   WIN32 
				   ${PROG_SOURCES} 
				   ${PROG_HEADERS}
				   ${UIC_HEADERS}
				   ${MOC_SOURCES}
				   ${RCC_SOURCES})
ENDIF(BUILD_AS_CONSOLE)




LINK_WITH_VARIABLES(${PROG_NAME}
  QT_QTCORE_LIBRARY
  QT_QTGUI_LIBRARY
  QT_QTOPENGL_LIBRARY 
  DTQT_LIBRARY
  DTUTIL_LIBRARY
  DTCORE_LIBRARY
  DTANIM_LIBRARY
  DTAI_LIBRARY
  DTABC_LIBRARY
  DTGAME_LIBRARY
  DTGUI_LIBRARY
  DTAUDIO_LIBRARY
  DTACTORS_LIBRARY
  OPENGL_gl_LIBRARY
  OSG_LIBRARY
  OSGGA_LIBRARY
  OSOFVER_LIBRARY
  OSGUTIL_LIBRARY
  OSGFX_LIBRARY
  OSGSIM_LIBRARY
  OSGPARTICLE_LIBRARY
  OSGTEXT_LIBRARY
#  GDAL_LIBRARY
  OSGSHADOW_LIBRARY
  OSGDB_LIBRARY
  OPENTHREADS_LIBRARY
  OFVGM_LIBRARY
)
    
INCLUDE(ModuleInstall OPTIONAL)

IF (MSVC)  
   # or WinMain ?
   #SET_TARGET_PROPERTIES(${PROG_NAME} PROPERTIES LINK_FLAGS_RELEASE "/ENTRY:\"_tWinMain\" /SUBSYSTEM:WINDOWS")
ENDIF (MSVC)


SET_MSVC_TARGET(${PROG_NAME} "${OFV_SOURCE_DIR}/bin")

